# Neural_Network_C-plus

./: .gitignore  CMakeLists.txt  README.md
matrix/: CMakeLists.txt  matrix.cpp  matrix.h
src/: main.cpp
